--- a/styles/Slider.module.css
+++ b/styles/Slider.module.css
@@ -9,6 +9,7 @@
     background: rgba(255,255,255,0.98);
     height: 100%;
     padding-bottom: 70px;
+    overflow-y: auto;
 }
 
 .navigationList {
